# telegram_converter_vk_bot

./: README.md  converter.py  main.py  pyproject.toml  requirements.txt
output_txt/: maintest2.txt  test1.txt  test3.txt  test4.txt
